# gens-gs-ii

./: .gitignore  CMakeLists.txt  TAGS.txt  gens-gs-ii.kdev4  git_version.sh
extlib/: CMakeLists.txt
extlib/glew/: CMakeLists.txt  _MODIFIED_GLEW.txt  custom.txt  glew.c
extlib/gtest/: CMakeLists.txt  _MODIFIED_GTEST.txt
extlib/gtest/src/: gtest.cc
extlib/libpng/: CMakeLists.txt  _MODIFIED_LIBPNG.txt  png.h  pngtest.c
extlib/libpng/scripts/: symbols.def
extlib/lzma/: CMakeLists.txt  _MODIFIED_LZMA.txt
extlib/lzma/7z/: 7zFile.c  7zFile.h  CMakeLists.txt
extlib/lzma/lzmabase/: CMakeLists.txt  CpuArch.c  Ppmd7.c  Ppmd8.c  XzDec.c  XzIn.c
extlib/minizip/: CMakeLists.txt  _MODIFIED_MINIZIP.txt  crypt.h  ioapi.c  ioapi.h  iowin32.c  iowin32u.c  iowin32u.h  unzip.c  unzip.h  zip.c
extlib/popt/: CMakeLists.txt  _MODIFIED_POPT.txt  config.h.in  lookup3.c  popt.3  popt.c  poptconfig.c  popthelp.c  poptint.h  secure_getenv.c  system.h
extlib/unrar/: CMakeLists.txt  dll.cpp  dll.hpp  rs16.cpp
extlib/zlib/: CMakeLists.txt  _MODIFIED_ZLIB.txt  crc32.c  deflate.c  deflate.h  example.c  gzclose.c  gzguts.h  gzlib.c  gzread.c  gzwrite.c  infback.c  inflate.c  trees.c  zconf.h.cmakein  zconf.h.in  zlib.h  zutil.c  zutil.h
extlib/zlib/test/: example.c  minigzip.c
src/: CMakeLists.txt  c++11-compat.h  c++11-compat.h.in  c++11-compat.msvc.h  c99-compat.msvcrt.h  msvc-c99-compat.h
src/extlib/: CMakeLists.txt
src/extlib/Blip_Buffer/: CMakeLists.txt
src/extlib/glew/: CMakeLists.txt  _MODIFIED_GLEW.txt  custom.txt  glew.c
src/extlib/lzma/: CMakeLists.txt  _MODIFIED_LZMA.txt
src/extlib/minizip/: CMakeLists.txt  ioapi.h  iowin32.c  iowin32u.c  unzip.c
src/extlib/zlib/: CMakeLists.txt  _MODIFIED_ZLIB.txt  configure  configure.orig  gzip_redefinitions.h  gzwrite.c  zlib.h
src/gens-qt4/: AboutWindow.cpp  AboutWindow.hpp  CMakeLists.txt  ConfigHandler.cpp  ConfigHandler.hpp  CtrlConfigWindow.cpp  CtrlConfigWindow.hpp  EmuManager.cpp  EmuManager.hpp  EmuManager_qEmu.cpp  EmuManager_str.cpp  EmuThread.cpp  EmuThread.hpp  ExtPrgHandler.cpp  ExtPrgHandler.hpp  GeneralConfigWindow.cpp  GeneralConfigWindow.hpp  GeneralConfigWindow_mac.cpp  GeneralConfigWindow_mac.mm  GeneralConfigWindow_slots.cpp  GensConfig.cpp  GensConfig.hpp  GensKeyConfig.hpp  GensLineEdit.cpp  GensLineEdit.hpp  GensMenuBar.cpp  GensMenuBar.hpp  GensMenuBar_menus.hpp  GensQApplication.cpp  GensQApplication.hpp  GensQApplication_win32.cpp  GensQGLWidget.cpp  GensQGLWidget.hpp  GensWindow.cpp  GensWindow.hpp  IdleThread.cpp  IdleThread.hpp  McdControlWindow.cpp  McdControlWindow.hpp  Screenshot.cpp  (+14 more)
src/gens-qt4/Audio/: ABackend.cpp  ABackend.hpp  ABackend_Write.cpp  ARingBuffer.cpp  ARingBuffer.hpp  GensPortAudio.cpp  GensPortAudio.hpp
src/gens-qt4/Config/: ConfigDefaults.cpp  ConfigDefaults.hpp  ConfigItem.cpp  ConfigItem.hpp  ConfigItemColor.cpp  ConfigItemColor.hpp  ConfigStore.cpp  ConfigStore.hpp  CtrlConfig.cpp  CtrlConfig.hpp  GensConfig.cpp  GensConfig.hpp  PathConfig.cpp  PathConfig.hpp  RecentRoms.cpp  RecentRoms.hpp
src/gens-qt4/Input/: EventKeys.cpp  EventKeys.hpp  KeyHandlerQt.cpp  KeyHandlerQt.hpp
src/gens-qt4/RomDB/: McdRomDB.cpp  (+3 more)
src/gens-sdl/: CMakeLists.txt  Config.cpp  Config.hpp  CrazyEffectLoop.cpp  CrazyEffectLoop.hpp  EmuLoop.cpp  EmuLoop.hpp  EventLoop.cpp  EventLoop.hpp  EventLoop_p.hpp  GLBackend.cpp  GLBackend.hpp  GLShader.cpp  GLShader.hpp  GLShaderFastBlur.cpp  GLShaderFastBlur.hpp  GLTex.cpp  GLTex.h  GLTex.hpp  Options.cpp  Options.hpp  OsdFont.h  OsdFont_C64.cpp  OsdFont_C64.hpp  OsdFont_VGA.cpp  OsdFont_VGA.hpp  OsdGL.cpp  OsdGL.hpp  RingBuffer.cpp  RingBuffer.hpp  SdlGLBackend.cpp  SdlGLBackend.hpp  SdlHandler.cpp  SdlHandler.hpp  SdlHandler_scancode.cpp  SdlSWBackend.cpp  SdlSWBackend.hpp  VBackend.cpp  VBackend.hpp  config.gens-sdl.h.in  (+4 more)
src/libW32U/: CMakeLists.txt  W32U_argv.c  W32U_argv.h  W32U_libc.c  W32U_libc.h  W32U_mini.c  W32U_mini.h  W32U_shlobj.c  W32U_shlobj.h  config.libW32U.h.in  is_unicode.h
src/libcompat/: CMakeLists.txt  aligned_malloc.h  byteorder.h  byteswap.c  byteswap.h  byteswap_x86.c  compat_getopt.h  config.libcompat.h.in  cpuflags.c  cpuflags.h  cpuflags_ppc.c  cpuflags_x86.c  cpuflags_x86.h  dummy.c  reentrant.h
src/libgens/: CMakeLists.txt  EmuContext.cpp  EmuContext.hpp  IoManager.cpp  IoManager.hpp  MtQueue.cpp  MtQueue.hpp  Rom.cpp  Rom.hpp  SdlVideo.cpp  SdlVideo.hpp  config.h.in  config.libgens.h.in  credits.c  credits.h  lg_main.cpp  lg_main.hpp  lg_osd.c  lg_osd.h  lg_win32.c  lg_win32.h
src/libgenscd/: CMakeLists.txt  CdDrive.cpp  CdDrive.hpp  CdDriveLinux.cpp  CdDriveLinux.hpp  CdDriveSpti.cpp  CdDriveSpti.hpp  CdDriveTest.cpp  DiscType.h  ScsiBase.cpp  ScsiBase.hpp  ScsiLinux.cpp  ScsiLinux.hpp  ScsiSpti.cpp  ScsiSpti.hpp  genscd_iso9660.h  genscd_scsi.h  genscd_scsi_win32.h  scsi_errors.c  scsi_errors.h  scsi_protocol.h
src/libgensfile/: Archive.cpp  Archive.hpp  ArchiveFactory.cpp  ArchiveFactory.hpp  CMakeLists.txt  Gzip.cpp  Gzip.hpp  Lzma.cpp  Lzma.hpp  LzmaSdk.cpp  LzmaSdk.hpp  MemFake.cpp  MemFake.hpp  Rar.cpp  Rar.hpp  Sz.cpp  Sz.hpp  UnRAR_dll.cpp  UnRAR_dll.hpp  Xz.cpp  Xz.hpp  Zip.cpp  Zip.hpp  config.libgensfile.h.in
src/libgenskeys/: CMakeLists.txt  GensKey_t.h  KeyManager.cpp  KeyManager.hpp
src/libgenstext/: CMakeLists.txt  Encoding.cpp  Encoding.hpp  StringManip.cpp  StringManip.hpp  byteorder.h  byteorder.h.in  config.libgenstext.h.in
src/libzomg/: CMakeLists.txt  Metadata.cpp  Metadata.hpp  Metadata_ogc.cpp  Metadata_p.hpp  Metadata_unix.cpp  Metadata_win32.cpp  PngReader.cpp  PngReader.hpp  PngWriter.cpp  PngWriter.hpp  Zomg.cpp  Zomg.hpp  ZomgBase.cpp  ZomgBase.hpp  ZomgIni.cpp  ZomgIni.hpp  ZomgLoad.cpp  ZomgSave.cpp  Zomg_p.hpp  config.h.in  config.libzomg.h.in  img_data.h  zomg_byteorder.h  zomg_byteorder.h.in  zomg_byteswap.c  zomg_byteswap.h  zomg_common.h  zomg_eeprom.h  zomg_m68k.h  zomg_md_io.h  zomg_md_time_reg.h  zomg_md_tmss_reg.h  zomg_md_z80_ctrl.h  zomg_psg.h  zomg_vdp.h  zomg_ym2612.h  zomg_z80.h
src/starscream/: CMakeLists.txt  star_m68k.c
src/tools/: CMakeLists.txt  mcd_pcm.c
(+616 files in other folders)
