PROJECT(src)
cmake_minimum_required(VERSION 2.6.0)

# External libraries.

IF(USE_INTERNAL_ZLIB)
	# Use the internal copy of zlib. (statically-linked)
	SET(OLD_BUILD_SHARED_LIBS ${BUILD_SHARED_LIBS})
	SET(OLD_SKIP_INSTALL_LIBRARIES ${SKIP_INSTALL_LIBRARIES})
	SET(OLD_SKIP_INSTALL_HEADERS ${SKIP_INSTALL_HEADERS})
	SET(OLD_SKIP_INSTALL_FILES ${SKIP_INSTALL_FILES})
	SET(OLD_SKIP_INSTALL_ALL ${SKIP_INSTALL_ALL})
	
	SET(BUILD_SHARED_LIBS OFF)
	SET(SKIP_INSTALL_LIBRARIES ON)
	SET(SKIP_INSTALL_HEADERS ON)
	SET(SKIP_INSTALL_FILES ON)
	SET(SKIP_INSTALL_ALL ON)
	
	# Use Z_PREFIX to prevent conflicts with libQtCore's internal zlib on Win32.
	SET(Z_PREFIX 1)
	ADD_SUBDIRECTORY(zlib)
	UNSET(Z_PREFIX)
	
	SET(BUILD_SHARED_LIBS ${OLD_BUILD_SHARED_LIBS})
	SET(SKIP_INSTALL_LIBRARIES ${OLD_SKIP_INSTALL_LIBRARIES})
	SET(SKIP_INSTALL_HEADERS ${OLD_SKIP_INSTALL_HEADERS})
	SET(SKIP_INSTALL_FILES ${OLD_SKIP_INSTALL_FILES})
	SET(SKIP_INSTALL_ALL ${OLD_SKIP_INSTALL_ALL})
	
	UNSET(OLD_BUILD_SHARED_LIBS)
	UNSET(OLD_SKIP_INSTALL_LIBRARIES)
	UNSET(OLD_SKIP_INSTALL_HEADERS)
	UNSET(OLD_SKIP_INSTALL_FILES)
	UNSET(OLD_SKIP_INSTALL_ALL)
ENDIF(USE_INTERNAL_ZLIB)

# MiniZip
IF(USE_INTERNAL_MINIZIP)
	ADD_SUBDIRECTORY(minizip)
ENDIF(USE_INTERNAL_MINIZIP)

# LZMA
IF(USE_INTERNAL_LZMA)
	ADD_SUBDIRECTORY(lzma)
ENDIF(USE_INTERNAL_LZMA)

IF(USE_INTERNAL_GLEW)
	# Use the internal copy of glew.
	ADD_SUBDIRECTORY(glew)
ENDIF(USE_INTERNAL_GLEW)
