PROJECT(src)
cmake_minimum_required(VERSION 2.6.0)

# External libraries.

# Check for system zlib.
IF(ZLIB_FOUND)
	# System zlib was found.
ELSE(ZLIB_FOUND)
	# System zlib was not found.
	# Use the internal copy of zlib.
	
	SET(OLD_BUILD_SHARED_LIBS ${BUILD_SHARED_LIBS})
	SET(OLD_SKIP_INSTALL_LIBRARIES ${SKIP_INSTALL_LIBRARIES})
	SET(OLD_SKIP_INSTALL_HEADERS ${SKIP_INSTALL_HEADERS})
	SET(OLD_SKIP_INSTALL_FILES ${SKIP_INSTALL_FILES})
	SET(OLD_SKIP_INSTALL_ALL ${SKIP_INSTALL_ALL})
	
	SET(BUILD_SHARED_LIBS OFF)
	SET(SKIP_INSTALL_LIBRARIES ON)
	SET(SKIP_INSTALL_HEADERS ON)
	SET(SKIP_INSTALL_FILES ON)
	SET(SKIP_INSTALL_ALL ON)
	
	ADD_SUBDIRECTORY(zlib)
	SET(ZLIB_LIBRARY zlib)
	SET(ZLIB_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/zlib")
	SET(ZLIB_FOUND 1)
	SET(HAVE_ZLIB 1)
	
	SET(BUILD_SHARED_LIBS ${OLD_BUILD_SHARED_LIBS})
	SET(SKIP_INSTALL_LIBRARIES ${OLD_SKIP_INSTALL_LIBRARIES})
	SET(SKIP_INSTALL_HEADERS ${OLD_SKIP_INSTALL_HEADERS})
	SET(SKIP_INSTALL_FILES ${OLD_SKIP_INSTALL_FILES})
	SET(SKIP_INSTALL_ALL ${OLD_SKIP_INSTALL_ALL})
	
	UNSET(OLD_BUILD_SHARED_LIBS)
	UNSET(OLD_SKIP_INSTALL_LIBRARIES)
	UNSET(OLD_SKIP_INSTALL_HEADERS)
	UNSET(OLD_SKIP_INSTALL_FILES)
	UNSET(OLD_SKIP_INSTALL_ALL)
ENDIF(ZLIB_FOUND)

# MiniZip.
ADD_SUBDIRECTORY(minizip)
